v2-website/versioned_docs/version-0.23/transforms.md
---
id: transforms
title: Transforms
original_id: transforms
---

### Props

- [`rotation`](transforms.md#rotation)
- [`scaleX`](transforms.md#scalex)
- [`scaleY`](transforms.md#scaley)
- [`transform`](transforms.md#transform)
- [`transformMatrix`](transforms.md#transformmatrix)
- [`translateX`](transforms.md#translatex)
- [`translateY`](transforms.md#translatey)

---

# Reference

## Props

### `rotation`

| Type                                                                         | Required |
| ---------------------------------------------------------------------------- | -------- |
| deprecatedPropType(ReactPropTypes.number, 'Use the transform prop instead.') | No       |

---

### `scaleX`

| Type                                                                         | Required |
| ---------------------------------------------------------------------------- | -------- |
| deprecatedPropType(ReactPropTypes.number, 'Use the transform prop instead.') | No       |

---

### `scaleY`

| Type                                                                         | Required |
| ---------------------------------------------------------------------------- | -------- |
| deprecatedPropType(ReactPropTypes.number, 'Use the transform prop instead.') | No       |

---

### `transform`

| Type                                                                                                                                                                                                                                                                                                                                                                                                                                                    | Required |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------- |
| array of object: {"{"}perspective: number{"}"}, ,object: {"{"}rotate: string{"}"}, ,object: {"{"}rotateX: string{"}"}, ,object: {"{"}rotateY: string{"}"}, ,object: {"{"}rotateZ: string{"}"}, ,object: {"{"}scale: number{"}"}, ,object: {"{"}scaleX: number{"}"}, ,object: {"{"}scaleY: number{"}"}, ,object: {"{"}translateX: number{"}"}, ,object: {"{"}translateY: number{"}"}, ,object: {"{"}skewX: string{"}"}, ,object: {"{"}skewY: string{"}"} | No       |

---

### `transformMatrix`

| Type                    | Required |
| ----------------------- | -------- |
| TransformMatrixPropType | No       |

---

### `translateX`

| Type                                                                         | Required |
| ---------------------------------------------------------------------------- | -------- |
| deprecatedPropType(ReactPropTypes.number, 'Use the transform prop instead.') | No       |

---

### `translateY`

| Type                                                                         | Required |
| ---------------------------------------------------------------------------- | -------- |
| deprecatedPropType(ReactPropTypes.number, 'Use the transform prop instead.') | No       |
